--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^9.12.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.4",
     "core-js": "^3.8.3",
